[gd_scene load_steps=27 format=3 uid="uid://05x7ypktgbc5"]

[ext_resource type="Script" path="res://Scripts/rules_scene.gd" id="1_adi86"]
[ext_resource type="FontFile" uid="uid://qh2srf4234rf" path="res://Fonts/Xolonium-Regular.ttf" id="1_r1dlk"]
[ext_resource type="Texture2D" uid="uid://b0v7oorj2x0kh" path="res://Objects/Textures/book1.png" id="3_a6g22"]
[ext_resource type="Texture2D" uid="uid://bhc68g6k1uol4" path="res://Objects/Textures/book1_pressed.png" id="4_5voki"]
[ext_resource type="Texture2D" uid="uid://0m56csti5654" path="res://Objects/Textures/book1_hover.png" id="5_h1637"]
[ext_resource type="Texture2D" uid="uid://b8eftddfvq711" path="res://Objects/Textures/step1.png" id="6_p2oed"]
[ext_resource type="Texture2D" uid="uid://dv4uego72ogr0" path="res://Objects/Textures/book1_focus.png" id="6_y71k2"]
[ext_resource type="Texture2D" uid="uid://c83h6ec48bmd0" path="res://Objects/Textures/step2.png" id="7_7no2e"]
[ext_resource type="Texture2D" uid="uid://cua0liiumk57j" path="res://Objects/Textures/menu_background_2.PNG" id="7_mrx4f"]
[ext_resource type="Texture2D" uid="uid://dfsh3ct1avoie" path="res://Objects/Textures/step3.png" id="8_hm3ho"]
[ext_resource type="Texture2D" uid="uid://bd5aobxslb8nf" path="res://Objects/Textures/step4.png" id="9_jvtqb"]
[ext_resource type="Texture2D" uid="uid://bgy22uapefx4o" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/Up-Key_1.png" id="9_sddh4"]
[ext_resource type="Texture2D" uid="uid://c2kontqhxtwkm" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/Down-Key_1.png" id="10_6xs74"]
[ext_resource type="Texture2D" uid="uid://bmbu7f6lbsvkd" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/Left-Key_1.png" id="11_lc7o0"]
[ext_resource type="Texture2D" uid="uid://c2l1sm3lym4lq" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/Right-Key_1.png" id="12_pj00a"]
[ext_resource type="Texture2D" uid="uid://c8laey6cr4oor" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/Enter-Key.png" id="13_oxiog"]
[ext_resource type="Texture2D" uid="uid://diep30m0jkkfj" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/Space-Key.png" id="14_6ohco"]
[ext_resource type="Texture2D" uid="uid://ctqt381b2lmve" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/W-Key.png" id="15_kgqn6"]
[ext_resource type="Texture2D" uid="uid://cbbssvpkmll6s" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/S-Key.png" id="16_0mk7u"]
[ext_resource type="Texture2D" uid="uid://c1ppldl3uirxu" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/A-Key.png" id="17_4yl5g"]
[ext_resource type="Texture2D" uid="uid://d0e03bxummhtp" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/D-Key.png" id="18_gao4e"]
[ext_resource type="Texture2D" uid="uid://dte6cqani3uun" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/R-Key.png" id="19_gms04"]
[ext_resource type="Texture2D" uid="uid://dhtavygcc5tgm" path="res://Objects/Textures/SimpleFlatKeys/SimpleFlatKeys/Dark/F-Key.png" id="20_hbjpv"]
[ext_resource type="Texture2D" uid="uid://c0k6gnkqn0vck" path="res://Objects/Textures/SimpleFlatKeys/button_xbox_analog_blank.png" id="21_nx8l4"]
[ext_resource type="Texture2D" uid="uid://c7gfxtwcftw8f" path="res://Objects/Textures/SimpleFlatKeys/button_xbox_digital_a_3.png" id="22_hnh4n"]
[ext_resource type="Texture2D" uid="uid://ddo10fsabdkwj" path="res://Objects/Textures/SimpleFlatKeys/button_xbox_digital_b_3.png" id="23_cmmmn"]

[node name="RulesScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_adi86")

[node name="Rules" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 40.0
offset_right = 2402.0
offset_bottom = 384.0
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_r1dlk")
theme_override_font_sizes/font_size = 48
text = "You are the last 2 competitors for the Harvard Library job. 
Now it's time for the final test.
Whoever can put away the most books will be hired.
Careful, there's hardly any room left, so be quick!!!"

[node name="ControlRules" type="Label" parent="."]
layout_mode = 0
offset_left = 1224.0
offset_top = 352.0
offset_right = 1802.0
offset_bottom = 792.0
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_r1dlk")
theme_override_font_sizes/font_size = 48

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1808.0
offset_top = 880.0
offset_right = 1904.0
offset_bottom = 1198.0
rotation = 1.5708
texture_normal = ExtResource("3_a6g22")
texture_pressed = ExtResource("4_5voki")
texture_hover = ExtResource("5_h1637")
texture_focused = ExtResource("6_y71k2")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="NextButton"]
layout_mode = 0
offset_top = 318.0
offset_right = 318.0
offset_bottom = 414.0
rotation = -1.5708
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_r1dlk")
theme_override_font_sizes/font_size = 48
text = "NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1808.0
offset_top = 880.0
offset_right = 1904.0
offset_bottom = 1198.0
rotation = 1.5708
texture_normal = ExtResource("3_a6g22")
texture_pressed = ExtResource("4_5voki")
texture_hover = ExtResource("5_h1637")
texture_focused = ExtResource("6_y71k2")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 0
offset_top = 318.0
offset_right = 318.0
offset_bottom = 414.0
rotation = -1.5708
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_r1dlk")
theme_override_font_sizes/font_size = 48
text = "START!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Step0" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 304.0
offset_right = 1219.0
offset_bottom = 964.0
texture = ExtResource("7_mrx4f")
expand_mode = 2

[node name="Step1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 208.0
offset_right = 1040.0
offset_bottom = 912.0
texture = ExtResource("6_p2oed")

[node name="Step3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 208.0
offset_right = 1100.0
offset_bottom = 888.0
texture = ExtResource("8_hm3ho")

[node name="Step2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 208.0
offset_right = 1165.0
offset_bottom = 907.0
texture = ExtResource("7_7no2e")

[node name="Step4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 208.0
offset_right = 1129.0
offset_bottom = 536.0
texture = ExtResource("9_jvtqb")
stretch_mode = 2

[node name="Step5" type="Control" parent="."]
anchors_preset = 0
offset_left = -48.0
offset_top = 24.0
offset_right = -8.0
offset_bottom = 64.0
metadata/_edit_group_ = true

[node name="GridContainer" type="GridContainer" parent="Step5"]
layout_mode = 0
offset_left = 100.0
offset_top = 257.0
offset_right = 563.0
offset_bottom = 595.0
columns = 2
metadata/_edit_group_ = true

[node name="UpTexture" type="TextureRect" parent="Step5/GridContainer"]
layout_mode = 2
texture = ExtResource("9_sddh4")
expand_mode = 2

[node name="Up" type="Label" parent="Step5/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Up"

[node name="DownTexture" type="TextureRect" parent="Step5/GridContainer"]
layout_mode = 2
texture = ExtResource("10_6xs74")
expand_mode = 2

[node name="Down" type="Label" parent="Step5/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Down"

[node name="LeftTexture" type="TextureRect" parent="Step5/GridContainer"]
layout_mode = 2
texture = ExtResource("11_lc7o0")
expand_mode = 2

[node name="Left" type="Label" parent="Step5/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Left"

[node name="RightTexture" type="TextureRect" parent="Step5/GridContainer"]
layout_mode = 2
texture = ExtResource("12_pj00a")
expand_mode = 2

[node name="Right" type="Label" parent="Step5/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Right"

[node name="SelectTexture" type="TextureRect" parent="Step5/GridContainer"]
layout_mode = 2
texture = ExtResource("13_oxiog")
expand_mode = 2

[node name="Select" type="Label" parent="Step5/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Get and drop book"

[node name="PlaceTexture" type="TextureRect" parent="Step5/GridContainer"]
layout_mode = 2
texture = ExtResource("14_6ohco")
expand_mode = 2

[node name="PlaceBook" type="Label" parent="Step5/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Place Book (mini-game)"

[node name="GridContainer2" type="GridContainer" parent="Step5"]
layout_mode = 0
offset_left = 616.0
offset_top = 253.0
offset_right = 1079.0
offset_bottom = 591.0
columns = 2
metadata/_edit_group_ = true

[node name="UpTexture" type="TextureRect" parent="Step5/GridContainer2"]
layout_mode = 2
texture = ExtResource("15_kgqn6")
expand_mode = 2

[node name="Up" type="Label" parent="Step5/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Up"

[node name="DownTexture" type="TextureRect" parent="Step5/GridContainer2"]
layout_mode = 2
texture = ExtResource("16_0mk7u")
expand_mode = 2

[node name="Down" type="Label" parent="Step5/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Down"

[node name="LeftTexture" type="TextureRect" parent="Step5/GridContainer2"]
layout_mode = 2
texture = ExtResource("17_4yl5g")
expand_mode = 2

[node name="Left" type="Label" parent="Step5/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Left"

[node name="RightTexture" type="TextureRect" parent="Step5/GridContainer2"]
layout_mode = 2
texture = ExtResource("18_gao4e")
expand_mode = 2

[node name="Right" type="Label" parent="Step5/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Right"

[node name="SelectTexture" type="TextureRect" parent="Step5/GridContainer2"]
layout_mode = 2
texture = ExtResource("19_gms04")
expand_mode = 2

[node name="Select" type="Label" parent="Step5/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Get and drop book"

[node name="PlaceTexture" type="TextureRect" parent="Step5/GridContainer2"]
layout_mode = 2
texture = ExtResource("20_hbjpv")
expand_mode = 2

[node name="PlaceBook" type="Label" parent="Step5/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Place Book (mini-game)"

[node name="GridContainer3" type="GridContainer" parent="Step5"]
layout_mode = 0
offset_left = 100.0
offset_top = 705.0
offset_right = 563.0
offset_bottom = 1043.0
columns = 2
metadata/_edit_group_ = true

[node name="UpTexture" type="TextureRect" parent="Step5/GridContainer3"]
layout_mode = 2
texture = ExtResource("21_nx8l4")
expand_mode = 2

[node name="Up" type="Label" parent="Step5/GridContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Move (left Joystick)"

[node name="SelectTexture" type="TextureRect" parent="Step5/GridContainer3"]
layout_mode = 2
texture = ExtResource("22_hnh4n")
expand_mode = 2

[node name="Select" type="Label" parent="Step5/GridContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Get and drop book"

[node name="PlaceTexture" type="TextureRect" parent="Step5/GridContainer3"]
layout_mode = 2
texture = ExtResource("23_cmmmn")
expand_mode = 2

[node name="PlaceBook" type="Label" parent="Step5/GridContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Place Book (mini-game)"

[node name="Manette" type="Label" parent="Step5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 80.0
offset_top = 616.0
offset_right = 356.0
offset_bottom = 704.0
grow_horizontal = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("1_r1dlk")
theme_override_font_sizes/font_size = 48
text = "Controller"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyboardP1" type="Label" parent="Step5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 80.0
offset_top = 176.0
offset_right = 432.0
offset_bottom = 264.0
grow_horizontal = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("1_r1dlk")
theme_override_font_sizes/font_size = 48
text = "Keyboard P1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyboardP2" type="Label" parent="Step5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 596.0
offset_top = 176.0
offset_right = 948.0
offset_bottom = 264.0
grow_horizontal = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.886275, 0.784314, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("1_r1dlk")
theme_override_font_sizes/font_size = 48
text = "Keyboard P2"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="NextButton" to="." method="_on_next_button_button_up"]
[connection signal="button_up" from="StartButton" to="." method="_on_next_button_2_button_up"]
